<resources>
    <string name="app_name">Biznect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KNECT</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="signup">SIGN UP</string>
    <string name="login">LOG IN</string>
    <string name="register">REGISTER BUSINESS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="email">Email</string>
    <string name="no_account">Don\'t have an account ?</string>
    <string name="account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="menu_logout">Logout</string>
    <string name="other">Other</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile">Profile</string>
    <string name="add_new_business">Add New Business</string>

    <string name="menu_about">About</string>
    <string name="menu_category">Business Categories</string>
    <string name="no_business">No Business Available</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the indu</string>

    <string name="notification_settings">NOTIFICATION SETTINGS</string>
    <string name="security">SECURITY</string>
    <string name="change_pin">Change Pin</string>
    <string name="to_change_pin">Click to change Pin</string>
    <string name="change_username">Change Username</string>
    <string name="to_change_username">Click to change Username</string>
    <string name="about">ABOUT</string>
    <string name="version1">1.0.0.0</string>
    <string name="developer">DEVELOPER</string>
    <string name="about_developer">Kwame NkrumahUniversity of Science and Technology student\'s final year project</string>
    <string name="google_services">Check for Google Play Services</string>
    <string name="google_services_sum">Check if Google play services is installed</string>
    <string name="no_categories">No Categories Available</string>
    <string name="contact">Contact</string>
    <string name="location">Location</string>
    <string name="services">Services You Provide</string>
    <string name="delivery">Delivery</string>
    <string name="category">Category</string>


    <string-array name="deliveries">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string name="notifications">Notifications</string>
    <string name="receive_notifications">Receive notifications</string>
    <string name="feedback">Feedback</string>
    <string name="send_feedback">Send us your feedback</string>
    <string name="version">Version</string>
    <string name="version_number">1.0</string>
    <string name="contact_developer_uri">mailto:alexfreeman221@gmail.com</string>
    <string name="my_business">My Businesses</string>
    <string name="business_title">Business Details</string>
    <string name="owner">Owner Details</string>
    <string name="update">Update</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="optional">optional</string>
    <string name="choose_image">Choose Image</string>
    <string name="social_handles">Social Media Handles</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!--    <string name="google_services">NOTIFICATION SETTINGS</string>-->



</resources>
