<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreference
        android:key="key_notification"
        android:title="@string/notifications"
        app:iconSpaceReserved="false"
        android:summary="@string/receive_notifications"
        />

    <Preference
        app:iconSpaceReserved="false"
        android:key="key_feedback"
        android:title="@string/feedback"
        android:summary="@string/send_feedback"
        >
        <intent android:action="android.intent.action.VIEW"
            android:data="@string/contact_developer_uri"/>
    </Preference>

    <Preference
        app:iconSpaceReserved="false"
        android:key="key_version"
        android:title="@string/version"
        android:summary="@string/version_number"/>


</PreferenceScreen>