<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/ic_business"
            android:title="@string/menu_category" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_add_business"
            android:icon="@drawable/ic_add"
            android:title="@string/add_new_business" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/menu_about" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

    </group>

    <item android:title="@string/other">
        <menu>

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_exit"
                android:title="@string/menu_logout"
                android:onClick="logoutUser"/>
        </menu>
    </item>

</menu>
