<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:scrollbars="none"
    android:layout_height="match_parent">

   <LinearLayout
       android:layout_margin="20dp"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="200dp"
          android:scaleType="centerCrop"
          android:src="@drawable/placeholder"
          android:id="@+id/image"
          android:layout_marginTop="20dp"
          android:layout_marginBottom="30dp"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginBottom="10dp"
           android:text="@string/name"/>


       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/name"
           android:inputType="text"
           android:layout_marginBottom="10dp"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginBottom="10dp"
           android:text="@string/category"/>


       <androidx.appcompat.widget.AppCompatSpinner
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/category"
           android:layout_marginBottom="20dp"/>


       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginBottom="10dp"
           android:text="@string/location"/>


       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/location"
           android:inputType="text"
           android:layout_marginBottom="10dp"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginBottom="10dp"
           android:text="@string/contact"
           />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/contact"
           android:inputType="number"
           android:layout_marginBottom="10dp"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginBottom="10dp"
           android:text="@string/services"
           />

       <EditText
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/services"
           android:inputType="text"
           android:layout_marginBottom="10dp"/>

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:textSize="15sp"
           android:layout_marginBottom="10dp"
           android:text="@string/delivery"
           />

       <androidx.appcompat.widget.AppCompatSpinner
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/delivery"
           android:entries="@array/deliveries"
           android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:text="@string/facebook"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/facebook"
        android:inputType="text"
        android:hint="@string/optional"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:text="@string/twitter"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/twitter"
        android:inputType="text"
        android:hint="@string/optional"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:text="@string/instagram"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/instagram"
        android:inputType="text"
        android:hint="@string/optional"
        android:layout_marginBottom="10dp"/>


       <Button
           android:layout_marginTop="40dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/add_new_business"
           android:textColor="@color/white"
           android:id="@+id/add"
           android:layout_marginBottom="40dp"
           android:background="@drawable/rounded_button"/>

   </LinearLayout>



</ScrollView>