<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <View
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/bg_image"
        android:background="@color/colorAccent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="60dp"
        tools:ignore="MissingPrefix"
        fontPath="fonts/Lobster-Regular.ttf"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="5dp"
        android:layout_below="@id/bg_image"
        app:cardElevation="1dp"
        android:layout_marginTop="-65dp"
        android:layout_marginStart="20dp"
        app:cardBackgroundColor="@color/white"
        android:layout_marginEnd="20dp">


        <LinearLayout
            android:padding="20dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/signup"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:padding="20dp"
                android:id="@+id/name"
                android:inputType="text"
                android:drawableStart="@drawable/ic_person"
                android:layout_marginBottom="20dp"
                android:drawablePadding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:padding="20dp"
                android:id="@+id/email"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email"
                android:layout_marginBottom="20dp"
                android:drawablePadding="10dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:padding="20dp"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_password"
                android:layout_marginBottom="20dp"
                android:drawablePadding="10dp"/>



            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup"
                android:id="@+id/sign_up"
                android:background="@drawable/rounded_button"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginBottom="20dp">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account"
                    android:textSize="15sp"
                    android:layout_marginEnd="5dp"/>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="15sp"
                    android:textAllCaps="false"
                    android:id="@+id/login"
                    android:textColor="@color/colorAccent"/>


            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>