<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Accesspage"
    android:background="@drawable/background5">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="40dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="93dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="118dp"
        app:srcCompat="@drawable/login"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_image"
        android:layout_alignStart="@+id/login_image"
        android:layout_alignEnd="@+id/login_image"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="16dp"
        android:ems="15"
        android:fontFamily="@font/denk_one"
        android:inputType="textPersonName"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/signup_image"
        android:layout_width="90dp"
        android:layout_height="220dp"
        android:layout_below="@+id/login_text"
        android:layout_alignEnd="@+id/login_text"
        android:layout_alignParentStart="true"
        android:layout_marginStart="138dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="49dp"
        app:srcCompat="@drawable/signup"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/signup_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signup_image"
        android:layout_alignStart="@+id/signup_image"
        android:layout_alignEnd="@+id/signup_image"
        android:layout_marginStart="14dp"
        android:layout_marginTop="-63dp"
        android:layout_marginEnd="17dp"
        android:fontFamily="@font/denk_one"
        android:text="@string/signup"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="116dp"
        android:layout_height="149dp"
        android:layout_below="@+id/signup_image"
        android:layout_alignStart="@+id/signup_image"
        android:layout_alignEnd="@+id/signup_image"
        android:layout_marginStart="-9dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="-17dp"
        app:srcCompat="@drawable/advertise" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_image"
        android:layout_alignStart="@+id/register_image"
        android:layout_alignEnd="@+id/register_image"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-32dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="-38dp"
        android:layout_marginBottom="96dp"
        android:text="@string/register"
        android:textSize="20sp"
        android:textAlignment="center"
        android:fontFamily="@font/denk_one"/>


</RelativeLayout>